Updated .env with pusher app keys

--- a/.env.example
+++ b/.env.example
@@ -42,10 +42,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=1361025
+PUSHER_APP_KEY=66b80d0857f8dd93e43d
+PUSHER_APP_SECRET=de02eae98a30d407bd42
+PUSHER_APP_CLUSTER=ap2
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
